ACABA PELO AMOR DE DEUS
EU NÃO AGUENTO MAIS

--- a/index.html
+++ b/index.html
@@ -8,11 +8,21 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da alura start">
+        <img class="cabecalho-imagem" src="PNG.png" alt="Hogwarts">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Escola</li>
             <li class="cabecalho-lista-item">Estudante</li>
         </ul>
+    
     </header>
+    <section class="escola">
+        <div class="escola-div-conteudo">
+            <h2 class="escola-titulo">Sobre a Escola</h2>
+            <p class="escola-texto-um">Localizada em algum lugar da Escócia, a Escola de Magia e Bruxaria de Hogwarts é a responsável por formar alguns dos bruxos mais memoráveis do mundo. </p>
+            <p class="escola-texto-dois">Ela foi criada por volta do ano 990 d.C., pelos quatro maiores bruxos da época: Godric Grifinória, Helga Lufa-Lufa, Salazar Sonserina e Rowena Corvinal.</p>
+        </div>
+        <img class="escola-imagem" src="png-clipart-logo-harry-potter-and-the-cursed-child-hogwarts-james-potter-fictional-universe-of-harry-potter-harry-potter-logo-magic-thumbnail.png" alt="Brasão de Hogwarts">
+    </section>
+    
 </body>
 </html>
