--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p class="escola-texto-um">Localizada em algum lugar da Escócia, a Escola de Magia e Bruxaria de Hogwarts é a responsável por formar alguns dos bruxos mais memoráveis do mundo. </p>
             <p class="escola-texto-dois">Ela foi criada por volta do ano 990 d.C., pelos quatro maiores bruxos da época: Godric Grifinória, Helga Lufa-Lufa, Salazar Sonserina e Rowena Corvinal.</p>
         </div>
-        <img class="escola-imagem" src="png-clipart-logo-harry-potter-and-the-cursed-child-hogwarts-james-potter-fictional-universe-of-harry-potter-harry-potter-logo-magic-thumbnail.png" alt="Brasão de Hogwarts">
+        <img class="escola-imagem" src="hogwarts-logo-94E2FD7FA8-seeklogo.com.png" alt="Brasão de Hogwarts">
     </section>
     
 </body>
